feat: study list 일부
