# src/routes/studies.route.js
@@ -3,6 +3,7 @@ import asyncHandler from "express-async-handler"
 
 import {
     studiesCreate,
+    studiesListView,
     studiesView,
 } from "../controllers/studies.controller.js"
 
@@ -11,3 +12,4 @@ export const studiesRoute = express.Router()
 studiesRoute.post("/", asyncHandler(studiesCreate))
 
 studiesRoute.get("/:studyId", asyncHandler(studiesView))
+studiesRoute.get("/", asyncHandler(studiesListView))
