# swagger/studies.swagger.yaml
@@ -1,3 +1,82 @@
+# /studies:
+#     get:
+#         tags:
+#             - Study
+#         summary: 스터디 모집글 추가
+#         parameters:
+#             - name: addStudy
+#               in: body
+#               required: true
+#               schema:
+#                   properties:
+#                       flag:
+#                           type: integer
+#                           description: 정렬
+#                           example: 3
+#                       keyword:
+#                           type: string
+#                           description: 키워드
+#                           example: "Test"
+#         responses:
+#             "200":
+#                 description: 회원 가입 성공!
+#                 schema:
+#                     type: object
+#                     properties:
+#                         status:
+#                             type: integer
+#                             example: 200
+#                         isSuccess:
+#                             type: boolean
+#                             example: true
+#                         code:
+#                             type: integer
+#                             example: 2000
+#                         message:
+#                             type: string
+#                             example: "success!"
+#                         data:
+#                             type: object
+#                             example:
+#                                 {
+
+#                                 }
+
+#             "400":
+#                 description: 잘못된 요청
+#                 schema:
+#                     type: object
+#                     properties:
+#                         status:
+#                             type: integer
+#                             example: 400
+#                         isSuccess:
+#                             type: boolean
+#                             example: false
+#                         code:
+#                             type: integer
+#                             example: COMMON001
+#                         message:
+#                             type: string
+#                             example: 잘못된 요청입니다
+
+#             "500":
+#                 description: 서버 에러
+#                 schema:
+#                     type: object
+#                     properties:
+#                         status:
+#                             type: integer
+#                             example: 500
+#                         isSuccess:
+#                             type: boolean
+#                             example: false
+#                         code:
+#                             type: integer
+#                             example: COMMON000
+#                         message:
+#                             type: string
+#                             example: 서버 에러, 관리자에게 문의 바랍니다.
 /studies:
     post:
         tags:
@@ -69,12 +148,7 @@
                             example: "success!"
                         data:
                             type: object
-                            example:
-                                {
-                                    "email": "swaggerTest@mail.com",
-                                    "name": "swagger",
-                                    "preferCategory": ["한식", "일식"],
-                                }
+                            example: {}
 
             "400":
                 description: 잘못된 요청
@@ -141,12 +215,7 @@
                             example: "success!"
                         data:
                             type: object
-                            example:
-                                {
-                                    "email": "swaggerTest@mail.com",
-                                    "name": "swagger",
-                                    "preferCategory": ["한식", "일식"],
-                                }
+                            example: {}
 
             "400":
                 description: 잘못된 요청
